# SkySync

./: .env.template  Cargo.toml
src/: main.rs
src/services/: mod.rs
src/services/cloudflare/: service.rs
src/services/discord/: mod.rs  webhooks.rs
